--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<html>
-<body>
-test
-</body>
+﻿<!DOCTYPE html> 
+<html> 
+  <head> 
+    <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>    
+   <!-- <script type="text/javascript" src="dist/data-exchange.js"></script>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <title>FocusData</title>
+  </head>
+  <body> 
+    <div id="app"></div> 
+    <script src="dist/build.js"></script>
+  </body> 
 </html>
