--- a/bitrix_auto/index.html
+++ b/bitrix_auto/index.html
@@ -87,7 +87,7 @@
       * передаем методу  `init` в качестве параметра callback-функцию 
       * - наше приложение 
       */
-      BX24.init(app);
+    //  BX24.init(app);
 
       function app() {
         const initDate = BX24.getAuth();
