--- a/bitrix_auto/index.html
+++ b/bitrix_auto/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Bitrix24 app tutorial</title>
-    <!-- подключаем библиотеку BX24 -->
-    <script src="https://api.bitrix24.com/api/v1/"></script>
+    <!-- подключаем библиотеку BX24 
+    <script src="https://api.bitrix24.com/api/v1/"></script>-->
 	<!-- https://yandex.ru/dev/jslibs/#jquery -->
 	<script src="https://yastatic.net/jquery/1.7.0/jquery.min.js"></script>
   </head>
