--- a/bitrix_auto/index.html
+++ b/bitrix_auto/index.html
@@ -60,8 +60,8 @@
   function create_cp_bill()
   {
    
-  var info=BX24.placement.info();
-  g_dial.dial_id=info.options.ID;
+  //var info=BX24.placement.info();
+  //g_dial.dial_id=info.options.ID;
   p_contact.then(function(data){
     return p_products;
   },function(error){
