--- a/bitrix_auto/index.html
+++ b/bitrix_auto/index.html
@@ -43,14 +43,14 @@
   <script>
   //Получение данных по контакту
     var p_contact=new Promise(function(resolve,reject){
-         return resolve;
+         return resolve("test1");
     });
   </script>
 
   <script>
   //Получение данных по товарам в сделке
     var p_products=new Promise(function(resolve,reject){
-         return resolve;
+         return resolve("test2");
     });
   </script>
 
