--- a/bitrix_auto/index.html
+++ b/bitrix_auto/index.html
@@ -79,7 +79,7 @@
      jQuery("#wndResult").html(_cur_error+'<br>'+error);
   })
   .then(function(data){
-    consolole.log(data);
+    console.log(data);
   },function(error){
      let _cur_error=jQuery("#wndResult").html();
      jQuery("#wndResult").html(_cur_error+'<br>'+error);
