--- a/bitrix_auto/index.html
+++ b/bitrix_auto/index.html
@@ -72,7 +72,7 @@
   //g_dial.dial_id=info.options.ID;
   GetContact("1")
   .then(function(data){
-    consolole.log(data);
+    console.log(data);
 	return GetProducts;
   },function(error){
      let _cur_error=jQuery("#wndResult").html();
