--- a/bitrix_auto/index.html
+++ b/bitrix_auto/index.html
@@ -45,7 +45,7 @@
   function GetContact(id_contract)  
   {
 	return new Promise(function(resolve,reject){
-	     consolole.log("Step 1");
+	     console.log("Step 1");
          resolve("test1");
     });
   }
@@ -56,7 +56,7 @@
   function GetProducts(id_contract)
   {
     return new Promise(function(resolve,reject){
-	     consolole.log("Step 2");
+	     console.log("Step 2");
          resolve("test2");
     });
   }
